# sdot

./: .clang-format  .clangd  .gitignore  .pypirc  .test.mk  404.html  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  Rk.rst  api-examples.html  autograd_toy.py  bsrc  check_zed_setup.sh  compile_flags.txt  conv.py  execution_speed.md  hashmap.json  hatch_build.py  index.html  markdown-examples.html  meson.build  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  setup.py  test_potentials.py  test_submdspan.cpp  try.py
.github/workflows/: build_and_upload.yml  build_wheels.yml
.zed/: README.md  settings.json  tasks.json
HC_lab/: README.md  autograd_example.ipynb  autograd_toy.py  exemple_sdot.ipynb  tools_diff.py
api/: distributions.html  ot-plan.html  power-diagram.html
assets/: api-examples.md.B01iJxk9.js  api-examples.md.B01iJxk9.lean.js  api-examples.md.D463tOn6.js  api-examples.md.D463tOn6.lean.js  api_distributions.md.CPzn6SE4.js  api_distributions.md.CPzn6SE4.lean.js  api_distributions.md.C_JA4K84.js  api_distributions.md.C_JA4K84.lean.js  api_ot-plan.md.Bia1JTru.js  api_ot-plan.md.Bia1JTru.lean.js  api_ot-plan.md.o2D8K7c2.js  api_ot-plan.md.o2D8K7c2.lean.js  api_power-diagram.md.CP-cmcRO.js  api_power-diagram.md.CP-cmcRO.lean.js  api_power-diagram.md.CsTT0Lm5.js  api_power-diagram.md.CsTT0Lm5.lean.js  app.C1MNVWkj.js  app.C42ZtaSt.js  examples_crowd-motion.md.BsEOoeLf.js  examples_crowd-motion.md.BsEOoeLf.lean.js  examples_crowd-motion.md.C_vlY4um.js  examples_crowd-motion.md.C_vlY4um.lean.js  examples_euler-equations.md.CU-DT8nD.js  examples_euler-equations.md.CU-DT8nD.lean.js  examples_euler-equations.md.CaI3y6T_.js  examples_euler-equations.md.CaI3y6T_.lean.js  examples_fokker-planck.md.B2Q3Gx2a.js  examples_fokker-planck.md.B2Q3Gx2a.lean.js  examples_fokker-planck.md.DpnG4hBD.js  examples_fokker-planck.md.DpnG4hBD.lean.js  examples_gaussian-mixture-fit.md.5J8MOOcT.js  examples_gaussian-mixture-fit.md.5J8MOOcT.lean.js  examples_gaussian-mixture-fit.md.CQxLLCDq.js  examples_gaussian-mixture-fit.md.CQxLLCDq.lean.js  examples_image-transport.md.CRjUKFLv.js  examples_image-transport.md.CRjUKFLv.lean.js  examples_image-transport.md.DQTpoEzI.js  examples_image-transport.md.DQTpoEzI.lean.js  examples_index.md.BhIYcOEg.js  examples_index.md.DB8t8eHE.js  (+59 more)
assets/chunks/: @localSearchIndexroot.Ck4mKe8r.js  VPLocalSearchBox.CBqtisHv.js  VPLocalSearchBox.CTJmUVeN.js  framework.BbxwM5k2.js  framework.ORo1F1ud.js  theme.CIoHraA-.js  theme.CdxF57Uc.js
doc/: make_pd_simple_2.py  optimal_transport_py.md  performance.md  polyhedral_convex_py.md  power_diagram_py.md
docs/: index.md
docs/.vitepress/: config.mts
docs/api/: distributions.md  ot-plan.md  power-diagram.md
docs/examples/: crowd-motion.md  euler-equations.md  examples.data.js  fokker-planck.md  gaussian-mixture-fit.md  image-transport.md  index.md  lloyd-quantization.md  periodic-metrics.md  power-diagram-geometry.md  tag-weights.json  test_dask.py  uniform-fill.md
docs/formules/: affine.typ  cell.typ  dask.typ
docs/guide/: backends.md  differentiability.md  distributions.md  getting-started.md  ground-metrics.md  ot-plan.md
docs/tutorials/: gaussian-mixture-fit.md  ot-plan-intro.md
examples/: crowd-motion.html  euler-equations.html  fokker-planck.html  gaussian-mixture-fit.html  image-transport.html  index.html  lloyd-quantization.html  periodic-metrics.html  power-diagram-geometry.html  uniform-fill.html
examples/ct_reconstruction/: ct_reconstruction.py
examples/python/: 0_PowerDiagram_basics.ipynb  1_OptimalTransport_basics.ipynb
fake_cuda/: cuda_runtime_api.h
guide/: backends.html  differentiability.html  distributions.html  getting-started.html  ground-metrics.html  ot-plan.html
include/: sdot_l2.h  sdot_w2.h
old_docs/: index.md  math_barkground.md  mkdocs.yml
old_docs/formules/: affine.typ  aggregates.typ  cell.typ  formules.typ
old_docs/gallery/: index.md
old_docs/hooks/: generate_examples.py
old_docs/templates/: example.md.j2  gallery.md.j2
python/jax/: sdot_jax.py  sdot_jax_cpp.cpp  sdot_jax_cpp.cpython*  sdot_jax_cpp.cpython-314-darwin.so.p
python/pytorch/: pyproject.toml  sdot_pytorch.py  sdot_pytorch_bindings.cpp  sdot_pytorch_cpp.cpp  sdot_pytorch_cpp.cpython*  sdot_pytorch_cpp.cpython-314-darwin.so.p
scripts/: align_header.py  bump_version.py  make_common_dylibs.py
sdot/: Cell.py  CellFunction.py  ConvexFunction.py  D2GTransportMap.py  Expr.py  G2DTransportMap.py  PoomVec.py  PowerDiagram.py  SdotPlan.py  SdotSolver.py  TransformationMatrix.py  __init__.py  optimal_transport_plan.py
sdot/bindings/: construct.py  generic_objects.SConstruct  (+14 more)
src/: Affine1DFunction.cxx  Affine1DFunction.h  Affine1d.cxx  DiracSet.cxx  DiracSet.h  P.h  PieceOfAffine1d.cxx  PieceOfAffine1dFunction.cxx  PieceOfAffine1dFunction.h  read_arg_name.cpp  read_arg_name.h
src/python/sdot/bindings/: RefMap.h  SConstruct  SConstruct.poom_vec  SConstruct.sdot  TF_objects.SConstruct  TF_objects_bindings.cpp  __init__.py  config.h  construct.py  cpp  ext  generic_objects.SConstruct  generic_objects_bindings.cpp  img_interpolation.SConstruct  img_interpolation_bindings.cpp  integration.SConstruct  integration_bindings.cpp  integration_module.py  loader.py  meson.build  nanobind_wrappers.h  ot_plan_1d_cpu.cpp  ot_plan_1d_cuda.cpp  poom_vec.SConstruct  poom_vec_bindings.cpp  poom_vec_nd_0.SConstruct  poom_vec_nd_0_bindings.cpp  poom_vec_nd_1.SConstruct  poom_vec_nd_1_bindings.cpp  sdot.SConstruct  sdot_bindings.cpp  sdot_bindings_cpu.cpp  sdot_bsp_bindings.cpp  src  test.mk  test.py  xmake.lua
src/python/sdot/bindings/variants/integration_module/1l/: integration_module.cpp
stubs/: builtins.pyi
subprojects/: catch2.wrap  eigen3.wrap  zpp_bits.wrap
tests/: catch_main.h  run_cpp_tests.py  test_PowerDiagram.cpp  test_cpu.cpp  test_dask.py  test_jax.py  test_metal.cpp  test_pytorch.py  test_vanilla.py  test_w2_cpu.cpp  test_w2_jax.py  test_w2_pytorch.py  vfs_build_config.py
tutorials/: gaussian-mixture-fit.html  ot-plan-intro.html
(+652 files in other folders)
