[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdot"
version = "0.1.0"
description = "Semi-discrete optimal transport"
dependencies = [
    "nanobind",
    "numpy",
    "meson",    # build system — nécessaire aussi en runtime (compilation des extensions)
    "ninja",    # backend meson
]

[tool.setuptools]
package-dir = {"" = "src/python"}

# [project.optional-dependencies]
# torch = ["torch"]
# jax   = ["jax", "jaxlib"]
# dask  = ["dask[array]"]
# plot  = ["matplotlib"]
# docs  = [
#     "mkdocs-material",
#     "mkdocstrings[python]",
#     "pyyaml",
# ]
# dev = [
#     "pytest",
#     "timing",
#     "sdot[torch,jax,dask,plot,ot,docs]",
# ]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
