[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdot"
version = "0.1.1"
description = "Semi-discrete optimal transport"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"# Changé de {text = "MIT"} à "MIT" pour éviter l'avertissement
authors = [{name = "sdot-team"}]
dependencies = [
    "numpy>=1.25",  # Essentiel pour runtime
    "nanobind",     # Nécessaire pour les bindings C++ (runtime)
]

[project.optional-dependencies]
dev = ["pytest", "timing"]  # Pour tests/dev
torch = ["torch>=2.0"]      # Backend PyTorch
jax = ["jax>=0.4", "jaxlib>=0.4"]  # Backend JAX (ajouté jaxlib)
dask = ["dask[array]>=2024.1"]     # Intégration Dask
plot = ["matplotlib>=3.7"]         # Pour plotting

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.setuptools.package-data]
sdot = ["bindings/*.so"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]